--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body {
 
 <div class="navbar">
   <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html#" class="active">Home</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/menu.html">Menu</a>
+  <a href="./menu.html">Menu</a>
   <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/news.html">News</a>
   <a href="https://www.instagram.com/mamito.restaurant.coffee/">Contact/INSTAGRAM</a>
   <a href="https://www.facebook.com/profile.php?id=100076608777386">FACEBOOK</a>
