--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0049)file:///C:/Users/IM%20HAPPY/Downloads/mamito.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		 </head><body>
-<a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
+<a href="./index.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
     <h2>mamito.restaurant.coffee</h2>
 <p>welcome to your comforte place.</p>
 	<style type="text/css">
@@ -117,9 +117,9 @@ body {
 
 
 <div class="navbar">
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html#" class="active">Home</a>
+  <a href="./index.html" class="active">Home</a>
   <a href="./menu.html">Menu</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/news.html">News</a>
+  <a href="./news.html">News</a>
   <a href="https://www.instagram.com/mamito.restaurant.coffee/">Contact/INSTAGRAM</a>
   <a href="https://www.facebook.com/profile.php?id=100076608777386">FACEBOOK</a>
    
