--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
  <head>
      <body>
 
-    <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
+    <a href=".index.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
     <h2>mamito.restaurant.coffee</h2>
 <p>welcome to your comforte place.</p>
 </body>
@@ -108,9 +108,9 @@ body {
 
   
 <div class="navbar">
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html#" class="active">Home</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/munu.html">Menu</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/news.html">News</a>
+  <a href=".index.html" class="active">Home</a>
+  <a href="./munu.html">Menu</a>
+  <a href="./news.html">News</a>
   <a href="https://www.instagram.com/mamito.restaurant.coffee/">Contact/INSTAGRAM</a>
   <a href="https://www.facebook.com/profile.php?id=100076608777386">FACEBOOK</a>
 </div>
