--- a/news.html
+++ b/news.html
@@ -4,16 +4,16 @@
   <title>News</title>
   <body>
 
-    <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
+    <a href=".index.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
     <h2>mamito.restaurant.coffee</h2>
 <p>welcome to your comforte place.</p>
 
      
 
 <div class="topnav">
-  <a class="active" href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/news.html">News</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/promotion.html">Promotion</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/new%20collection.html">New collection</a>
+  <a class="active" href=".index/news.html">News</a>
+  <a href=".promotion.html">Promotion</a>
+  <a href=".new collection.html">New collection</a>
 </div>
 
 <div style="padding-left:16px">
@@ -294,9 +294,9 @@ body {
 <body>
 
 <div class="navbar" id="myNavbar">
- <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/mamito.html#" class="active">Home</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/menu.html">Menu</a>
-  <a href="file:///C:/Users/IM%20HAPPY/Downloads/html%20mamito/news.html">News</a>
+ <a href=".index.html" class="active">Home</a>
+  <a href=".menu.html">Menu</a>
+  <a href=".news.html">News</a>
   <a href="https://www.instagram.com/mamito.restaurant.coffee/">Contact/INSTAGRAM</a>
   <a href="https://www.facebook.com/profile.php?id=100076608777386">FACEBOOK</a>
    
