--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</style>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>mamito</title>
+		<title>mamito restaurant.coffee official</title>
 		<style type="images/css">
 
 		</style>
