--- a/news.html
+++ b/news.html
@@ -11,9 +11,9 @@
      
 
 <div class="topnav">
-  <a class="active" href=".index/news.html">News</a>
-  <a href=".promotion.html">Promotion</a>
-  <a href=".new collection.html">New collection</a>
+  <a class="active" href="./index/news.html">News</a>
+  <a href="./promotion.html">Promotion</a>
+  <a href="./new collection.html">New collection</a>
 </div>
 
 <div style="padding-left:16px">
@@ -294,9 +294,9 @@ body {
 <body>
 
 <div class="navbar" id="myNavbar">
- <a href=".index.html" class="active">Home</a>
-  <a href=".menu.html">Menu</a>
-  <a href=".news.html">News</a>
+ <a href="./index.html" class="active">Home</a>
+  <a href="./menu.html">Menu</a>
+  <a href="./news.html">News</a>
   <a href="https://www.instagram.com/mamito.restaurant.coffee/">Contact/INSTAGRAM</a>
   <a href="https://www.facebook.com/profile.php?id=100076608777386">FACEBOOK</a>
    
