--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
      
 
 <div class="topnav">
-  <a class="active" href="./index/news.html">News</a>
+  <a class="active" href="./news.html">News</a>
   <a href="./promotion.html">Promotion</a>
   <a href="./new collection.html">New collection</a>
 </div>
