--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <title>News</title>
   <body>
 
-    <a href=".index.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
+    <a href="./index.html"><img src="406048470_363500836213539_8013872845502556522_n-removebg-preview.png" style="width:200px;height:200px;"></a>
     <h2>mamito.restaurant.coffee</h2>
 <p>welcome to your comforte place.</p>
 
